# first_project

./: .gitattributes  .gitignore  README.md  config.yaml  pyproject.toml
notebooks/: data_cleaning_alex.ipynb  data_cleaning_beatriz.ipynb  data_cleaning_rachel.ipynb  data_cleaning_viz_rachel.ipynb  functions.py  merged.csv
notebooks/src/: data_prep.py  features_beatriz.py  features_rachel.py  plots.py
src/: export.py  validation.py
